Fixed some styling

--- a/car_owner.html
+++ b/car_owner.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="form">
-    <form action="/car-owner-submit.html">
+    <form action="/car_owner_submit.html">
         <label for="start">Vælg start:</label>
         <select id="start" name="start">
             <option value="Allinge">Allinge</option>
@@ -34,9 +34,14 @@
             <option value="Rønne">Rønne</option>
         </select>
 
-        <label for="date">Dato:</label>
+        <label for="date">Vælg dato:</label>
         <input type="date" id="date" name="date">
-        <input type="submit" value="Søg">
+
+        <label for="time">Vælg tidspunkt:</label>
+        <input type="time" id="time" name="time">
+
+        <!--<input type="submit" value="Opret">-->
+        <a href="car_owner_submit.html"/>Opret</a>
     </form>
 </div>
 
