--- a/student.html
+++ b/student.html
@@ -14,7 +14,7 @@
 
 <div class="form">
     <h2>Opret kørelejlighed</h2>
-    <form action="/student-submit.html">
+    <form action="/student_submit.html">
         <label for="start">Vælg start:</label>
         <select id="start" name="start">
             <option value="Allinge">Allinge</option>
@@ -34,7 +34,8 @@
             <option value="Nexø">Nexø</option>
             <option value="Rønne">Rønne</option>
         </select>
-        <input type="submit" value="Søg">
+        <!--<input type="submit" value="Søg">-->
+        <a href="found_bookings.html"/>Søg</a>
     </form>
 </div>
 
